style.css
* {
    padding: 0;
    margin: 0;
}

header {
    padding: 20px;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    background-color: #3a4458;
    color: #3a4458;
    height: 100px;
}

header h1 {
    display: inline-block;
    font-size: 30px;
}

header div {
    padding-top: 15px;
    float: right;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 20px;
}

header a {
    color: #eee; 
    text-decoration: none;
    
}

header div ul li {
    list-style-type: none;
    display: inline-block;
    margin-left: 25px;
}

span {
    font-weight: bold;
}


p {
    font-size: 16px;
    color: #3a4458;
}

.coverPhoto {
    height: 150px;
    width: 100%;
    margin-bottom: 25px;
    background-size: cover;
    background-position: center;
    background-image: url("./Assets/cover.jpg");
}

.coverPhoto h2 {
    font-size: 20px;
    font-family: Arial, Helvetica, sans-serif;
    margin-top: 90px;
    float: right;
    padding: 20px;
    color: #fff;
}

.container1 img {
    margin-top: 10px;
    margin-left: 60px;
    height: 180px;
}

.content {
    width: 100%;
    display: inline-block;
    margin: 20px;
}

.layout {
    margin-bottom: 20px;
    margin-top: -20px;
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    color: #3a4458;
    display: flex;
}

.container1 {
    flex: 0 0 23%;
    /* need to get this to line up on the right side of the container */
    align-content: flex-end; 
}

.container2 {
    margin: 50px;
    margin-top: 0;
}

.container2 ul li {
    padding-top: 10px;
}

.container2 a {
    text-decoration: none;
    text-decoration: underline;
    color: #3a4458;
}

.container3 {
    width: 200px;
    
}

/* headers for each photo */
.container3 a {
    font-size:18px;
    text-decoration: none;
    margin-bottom: 150px;
}

/* image for each project */
.container3 img {
    border-style: solid;
    border-width: 5px;
    border-color: rgb(43, 241, 248);
    margin: 0px;
    height: 250px;;
    width: 350px;
    
}

/* the image glows upon the mouse hovering over it */
.container3 img:hover {
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    border-radius: 10px;
    -webkit-box-shadow: 0px 0px 30px 0px rgb(0, 255, 255);
    -moz-box-shadow: 0px 0px 30px 0px rgb(0, 255, 255);
    box-shadow: 0px 0px 30px 0px rgb(0, 255, 255);
}

/* to indicate once the project is clicked on  */
.container3 img:active {
    border-width: 10px;
}
/* NEED TO FIGURE OUT WHEN CLICKING ON THE TEXT */

.container3 #absolute {
    margin-top: -70px;
    margin-left: 0;
}

/* the line that separates the section header and section */
.layout .split {
    background-color: #3a4458;
    width: 15px;
    margin-bottom: 40px;
}

.layout h2 {
    font-size: 36px;
}

h3 {
    font-size: 12px;
    font-weight: normal;
}

.projects {
    display: flex;
    justify-content: space-between;
}

footer {
    padding: 30px;
    clear: both;
    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
    text-align: center;
}

footer h2 {
    font-size: 20px;
}

/* in the middle */
#relative { 
    position: relative;
    height: 200px;
    padding: 20px;
    margin-bottom: 20px;
    text-align: center;
}

#absolute {
    position: absolute;
    padding: 10px;
    text-align: center;
    background: rgb(43, 241, 248);
    margin-top: 20px;
    display: inline;
    margin-left: -20px;
}

